# query-generator

./: .flake8  Dockerfile  README.md  app.py  pyproject.toml
app/: main.py
app/static/css/: static.css
app/static/js/: code.js
app/templates/: index.html  package.json  table.html
static/css/: static.css
static/js/: code.js
templates/: button.html  index.html  package-lock.json  style.css.map  winner.html
