[tool.poetry]
name = "query_generator"
version = "0.1.0"
description = ""
authors = ["rishis07 <risheric@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
pdbpp = "^0.10.3"
pandas = "^1.4.3"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
