[tool.poetry]
name = "query_builder"
version = "0.1.0"
description = ""
authors = ["rishis07 <risheric@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
pdbpp = "^0.10.3"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
flake8 = "^4.0.1"
black = "^22.6.0"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.7.1"
flake8-bandit = "^3.0.0"
safety = "^2.0.0"
mypy = "^0.961"
flake8-annotations = "^2.9.0"
typeguard = "^2.13.3"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.0.0"
Sphinx = "^5.0.2"
sphinx-autodoc-typehints = "^1.18.3"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
